language/move-lang/tests/move_check/translated_ir_tests/move/commands/if_assigns_no_else.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/if_assigns_no_else.move:5:12
  │
3 │     let x;
  │         - The variable might not have a value due to this position. The variable must be assigned a value before being used
4 │     if (true) x = 42;
5 │     assert(x == 42, 42);
  │            ^ Invalid usage of variable 'x'

